<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_text"
        android:textSize="55sp"
        android:padding="10dp"
        android:background="#e5e5e5"
        android:layout_width="match_parent"
        android:layout_height= "match_parent"
        android:layout_weight="1.6"
        android:orientation="vertical"
        android:gravity="top|end"
        tools:ignore="InefficientWeight">
    </TextView>
    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:id="@+id/btnClear"
            style="@style/calculaterButton"
            android:text="@string/clr"
            android:onClick="onClear"
            tools:ignore="OnClick,UsingOnClickInXml" />
        <Button
            android:onClick="onOperation"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btnDivide"
            android:text="@string/div"
            style="@style/calculaterButton"
            />
        <Button
            android:onClick="onOperation"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btnMultiply"
            style="@style/calculaterButton"
            android:text="@string/multiply" />
        <Button
            style="@style/calculaterButton"
            android:text="@string/backspace"/>

    </LinearLayout>
    <LinearLayout
        style="@style/layoutStyle">

        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn7"
            android:text="@string/seven"
            style="@style/calculaterButton"
            />
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn8"
            android:text="@string/eight"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn9"
            android:text="@string/nine"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onOperation"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btnMinus"
            android:text="@string/minus"
            style="@style/calculaterButton"/>
    </LinearLayout>

    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn4"
            android:text="@string/four"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn5"
            android:text="@string/five"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn6"
            android:text="@string/six"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onOperation"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btnPlus"
            android:text="@string/plus"
            style="@style/calculaterButton"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.65"
    android:orientation="horizontal"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginRight="5dp">
    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn1"
            android:text="@string/one"
            style="@style/calculaterButton"/>
        <Button
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:id="@+id/btn2"
            android:text="@string/two"
            style="@style/calculaterButton"/>

        <Button
            android:id="@+id/btn3"
            style="@style/calculaterButton"
            android:onClick="onDigit"
            android:text="@string/three"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        style="@style/layoutStyle">
        <Button
            style="@style/calculaterButton"
            android:text="@string/percentage"/>
        <Button
            android:onClick="onDigit"
            tools:ignore="InefficientWeight,UsingOnClickInXml"
            android:id="@+id/btn0"
            style="@style/calculaterButton"
            android:text="@string/zero"
            />
        <Button
            android:onClick="onDecimalPoint"
            style="@style/calculaterButton"
            android:text="@string/dot"
            tools:ignore="OnClick,UsingOnClickInXml" />


    </LinearLayout>
    </LinearLayout>
    <Button
        android:onClick="onEqual"
        android:id="@+id/btnEqual"
        android:gravity="center"
        android:text="@string/equal"
        android:textColor="#616161"

        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="3.15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UsingOnClickInXml" />
</LinearLayout>
</LinearLayout>
